hphp/test/zend/bad/ext/standard/tests/strings/htmlentities11.php
<?php
	print ini_get('default_charset')."\n";
	var_dump(htmlentities("\xbc\xbd\xbe", ENT_QUOTES, ''));
?>